Bug 113252 - Basic Library Organizer is broken and closing dialogs crashes
Summary: Basic Library Organizer is broken and closing dialogs crashes
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: highest critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.0.0 target:6.1.0
Keywords: bibisected, bisected, regression
: 113318 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-10-18 22:59 UTC by Regina Henschel
Modified: 2019-12-07 19:20 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2017-10-18 22:59:12 UTC
I use Version: 6.0.0.0.alpha0+
Build ID: a4a182e24d2e3e954831a0a7c70a7299f28950cb
CPU threads: 4; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-10-18_04:47:29
Locale: de-DE (de_DE); Calc: group

Start LibreOffice. Go to Tools > Macros > Organize Macros > Basic
Click Button Organizer
Notice the dialog is broken.
Click on its button Close.
Click button Close in the next dialog -> crash.

It was OK in Version: 6.0.0.0.alpha0+
Build ID: b567cfb980435df131d776915bce9152135bdf0f
CPU threads: 4; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-10-06_05:43:17
Locale: de-DE (de_DE); Calc: group
Comment 1 Xisco Faulí 2017-10-18 23:10:58 UTC
Reproduced in

Version: 6.0.0.0.alpha0+
Build ID: 5ea1b4c336d1cad92dc18e7cf7e4b381396f448b
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

but not in

Version: 6.0.0.0.alpha0+
Build ID: 8457b50ffd6e41b4925aef17bed2b5a2f3bf56bd
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 2 Xisco Faulí 2017-10-19 21:37:13 UTC
Regression introduced by:

author	Caolán McNamara <caolanm@redhat.com>	2017-10-04 11:07:20 (GMT)
committer	Caolán McNamara <caolanm@redhat.com>	2017-10-17 07:55:31 (GMT)
commit 9b8828174dca6971d2490844b4c6cab2b9d57b8d (patch)
tree 330a27fa71ad84986ff4c6d88b961efd2b4fa777
parent 493a7e9932b09ddafd31f443ef2dc03d85f4b12b (diff)
turn implicit container explicit in buildable notebooks
as in interim measure for SfxTabDialogs we throw
away the TabPage if its not suitable for reuse

Bisected with: bibisect-linux64-6.0

Adding Cc: to Caolán McNamara
Comment 3 Regina Henschel 2017-10-20 11:53:41 UTC
If I revert the changes to organizedialog.ui directly in share\config\soffice.cfg\modules\BasicIDE\ui\organizedialog.ui in the installed LibreOffice, it solves the problem. The dialog is complete and closing does no longer crash.
Comment 4 Commit Notification 2017-10-20 11:54:54 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2e001b40ad0d19c8db528bb4df739e289163779d

Resolves: tdf#113252 missing tabs in basic library organizer

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Regina Henschel 2017-10-20 16:02:24 UTC
Dialog is OK in Version: 6.0.0.0.alpha1+
Build ID: 2e001b40ad0d19c8db528bb4df739e289163779d
CPU threads: 4; OS: Windows 6.1; UI render: default; 
Locale: de-DE (de_DE); Calc: group
Comment 6 Xisco Faulí 2017-10-21 15:14:23 UTC
*** Bug 113318 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2018-05-06 06:45:17 UTC
Zdeněk Crhonek committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dbf70dff8eefd18b1f757afcd07d1a0c830c4e3a

uitest for bug tdf#113252

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 raal 2019-12-07 19:20:46 UTC
The test exist, set status to Verified.