Resolves: tdf#113252 missing tabs in basic library organizer

Like SfxTabDialog, as in interim measure throw away the TabPage if its not
suitable for reuse

Change-Id: If8247ea37dfca42e690716a8b687677e0f73c9a8